@@ -49,6 +49,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add category table to allow better tracking of category membership counts
 ** (bug 1212) Give correct membership counts on the pages of large categories
 ** Use category table for more efficient display of Special:Categories
+** Allow sorting by number of members on Special:Categories, and also allow
+   descending sorts
 * (bug 1459) Search for duplicate files by hash: Special:FileDuplicateSearch
 
 === Bug fixes in 1.13 ===
